# AsyncTask

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  RunManyTimes.py  a.out  b.sh  pg.cpp  state.dot
draft/: a.out  draft.cpp
examples/: CMakeLists.txt  condvar.cpp  example_condvar.cpp  example_executor.cpp  example_executors.cpp  example_mutex.cpp  example_spawn.cpp  example_task.cpp  example_threadpool.cpp  executor.cpp  global_executor.cpp  poller.cpp  primitive.cpp  threadpool.cpp
include/Async/: ConcurrentQueue.hpp  Executor.hpp  Primitives.h  Primitives.hpp  Queue.hpp  Reactor.hpp  Runtime.hpp  Slab.hpp  Task.hpp  ThreadPool.hpp  ThreadSafe.hpp  concepts.hpp
include/Async/sys/: Event.hpp
include/Async/sys/unix/: epoll.hpp
include/Async/utils/: log.hpp  predefined.hpp
include/io/: ConcurrentQueue.hpp  ConcurretQueue.hpp  Dequeue.hpp  Executor.hpp  Executor.hxx  Executor1.hpp  Reactor.hpp  Slab.hpp  ThreadPool.hpp  io.hpp
include/io/async/: Task.hpp  tcp.hpp
include/io/net/: SocketAddr.hpp  tcp.hpp
include/io/sys/: Event.hpp
include/io/sys/common/: tcp.hpp
include/io/sys/unix/: Socket.hpp  epoll.hpp
include/io/sys/win/: Socket.hpp  io.hpp
lib/: Executor.cxx
lib/async/: tcp.cpp
lib/net/: SocketAddr.cpp  tcp.cpp
lib/sys/: Event.cpp
lib/sys/common/: tcp.cpp
lib/sys/unix/: Socket.cpp  epoll.cpp
lib/sys/win/: Socket.cpp
tests/: CMakeLists.txt  slab_test.cpp
utils/: log.hpp  platform.hpp  predefined.hpp
